platform/networking/istio/virtual-services/api-gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway-vs
  namespace: rental-dev
spec:
  hosts:
    - "*"
    - api-gateway.rental-dev.svc.cluster.local
  gateways:
    - rental-gateway
    - mesh
  http:
    - match:
        - uri:
            prefix: /api/
        - uri:
            prefix: /admin/
        - uri:
            exact: /healthz
      route:
        - destination:
            host: api-gateway.rental-dev.svc.cluster.local
            subset: v1
            port:
              number: 8000
          weight: 100
        # Canary placeholder
        # - destination:
        #     host: api-gateway.rental-dev.svc.cluster.local
        #     subset: v2
        #     port:
        #       number: 8000
        #   weight: 10
