platform/networking/istio/virtual-services/frontend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: rental-dev
spec:
  hosts:
    - "*"
  gateways:
    - rental-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rentalapp-frontend.rental-dev.svc.cluster.local
            subset: v1
            port:
              number: 3000
          weight: 100
      timeout: 30s
